2002-09-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/distdir.am (distdir): Create $dc_destdir right before
	its use.
	Reported by Akim Demaille.

	Fix for PR automake/366:
	* automake.in (handle_dist): Strip $(srcdir) and replace
	$(top_srcdir) when computing DIST_COMMON directories.
	* tests/include2.test: Use an obsolute $(srcdir), and check
	for spurious directories in $(distdir)/sub.
	* lib/am/distdir.am: Rewrite $(top_srcdir) as $(top_builddir).
	Reported by Kevin Ryde.

2002-09-29  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/exeext3.test: New file.
	* tests/Makefile.am (TESTS): Add exeext3.test.
	* automake.in (%target_name): New hash.
	(initialize_per_input): Reset %target_name.
	(rule_define): Fill %target_name, and use it to detect targets
	which have been registered with key X but really are X$(EXEEXT).

2002-09-27  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/mkinstalldirs: Reindent using `sh-indentation: 2'.
	Suggested by Bruno Haible.

	* Makefile.am (fetch, FETCHFILES): Don't fetch install-sh from
	Autoconf.  Automake now has the master copy of install-sh and
	mkinstalldirs.

2002-09-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.7.0a.

	* NEWS, configure.ac: Version 1.7.

2002-09-25  Art Haas  <ahaas@neosoft.com>

	* automake.texi (Optional, Options, Distributing, ANSI,
	API versioning): Spelling fixes and Texi tweaks.

2002-09-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Check for 'tex'.
	* tests/defs.in: Handle required=tex using configure's result.
	Reported by Patrick Welche.

	* Makefile.am (mdate-sh): Remove.
	* mdate-sh: Delete.
	Suggested by Akim Demaille.

2002-09-25  Tom Tromey  <tromey@redhat.com>

	* NEWS: Mention distuninstallcheck.
	* automake.texi (Dist): Document new macro and target.
	* lib/am/distdir.am (distuninstallcheck_listfiles): New macro.
	(distuninstallcheck): New target.
	(distcheck): Use distuninstallcheck.
