@@ -95,6 +95,7 @@ Josh MacDonald		jmacd@cs.berkeley.edu
 Joshua Cowan		jcowan@jcowan.reslife.okstate.edu
 js pendry		js.pendry@msdw.com
 Juergen A. Erhard	jae@laden.ilk.de
+Juergen Keil		jk@tools.de
 Karl Berry		kb@cs.umb.edu
 Karl Heuer		kwzh@gnu.org
 Kevin Dalley		kevin@aimnet.com
