@@ -91,6 +91,9 @@ cond22.test \
 cond23.test \
 cond24.test \
 cond25.test \
+cond26.test \
+cond27.test \
+cond28.test \
 condd.test \
 condincl.test \
 condincl2.test \
