@@ -1,5 +1,13 @@
 2002-09-30  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (require_variables): The fix introduced in 2002-09-19
+	is imcomplete.  Rewrite the conditional variable definition check
+	using &variable_not_always_defined_in_cond.
+	* tests/cond26.test, tests/cond27.test, tests/cond28.test: New file.
+	* tests/Makefile.am (TESTS): Add cond26.test, cond27.test, and
+	cond28.test.
+	Reported by Juergen Keil.
+
 	* lib/am/distdir.am (distdir): Create $dc_destdir right before
 	its use.
 	Reported by Akim Demaille.
